--- a/content/move/first-steps.mdx
+++ b/content/move/first-steps.mdx
@@ -33,16 +33,23 @@ Opening a bank account is a general necessity. In Armenia, it is used to:
 *   **Documents**: Passport, Social Security Number (SSN), and sometimes proof of registered address (*grantsoum*).
 *   **At the Bank**: All banks have kiosks where you take a number based on your needs. Wait for your number to appear on the screen.
 *   **Tips**: 
-    *   Use the **Earlyone** app to book appointments and avoid wait times. 
+    *   Use the [**Earlyone app**](https://earlyone.com/mobile-application) to book appointments and avoid wait times. 
     *   Banks in the city center are busier; try smaller branches or off-peak hours (morning or around 3 PM).
     *   Expect longest wait times around lunch and closing.
 
 <Note>
 Use mobile or online banking where possible. Contact us if you need to open a bank account; we will connect you with our partner bank.
+
+For more information about the banking system in Armenia, insurance, currency exchange, etc., please refer to the [Financials section](/work-finance/financials).
 </Note>
 
 ## 4. Register Your Residence (*Grantsoum*)
 Do this as soon as you have your residency card or citizenship. It is not complex but can be time-consuming.
+
+<Note>
+You should [book an appointment online](https://migration.e-gov.am/en/) for this service.
+</Note>
+
 1.  Go to your local police station with your card/passport.
 2.  Fill out the form with your address and phone number.
 3.  A police officer will visit your home (usually within a week) to verify you live there (without prior notification).
@@ -51,17 +58,16 @@ Do this as soon as you have your residency card or citizenship. It is not comple
 **Important Notes:**
 *   **Contracts**: You need a notarized rent contract. Inform your landlord beforehand.
 *   **Deadlines**: When changing residences, you must notify the territorial authorities **within a week** of the change. You can only be registered at one address at a time.
-*   **Appointments**: You should book an appointment online (check the Migration Service or Police website).
 *   **Landlord Issues**: Sometimes landlords have concerns about rights limitations. If this happens, refer to your district police station or contact lawyers to help resolve the issue.
 
 ## 5. Obtain a Social Security Number (SSN)
 Required for work, banking, and benefits.
-*   **Where**: The same police station where you registered your address. You can also get it at the main visa and passport department in **Davtashen**.
+*   **Where**: The same police station where you registered your address. You can also get it at the main visa and passport department in **Davtashen** (17/10, Davtashen, 4th District).
 *   **Bring**: Passport with registered address stamp.
 *   **Tip**: Keep a digital scan of your SSN document; you usually only need the number.
 
 <Note>
-You should book an appointment online for this service.
+You should [book an appointment online](https://migration.e-gov.am/en/) for this service. Davtashen office can be crowded by 9:00 AM; consider less crowded alternatives like Kanaker-Zeytun or Nubarashen offices.
 </Note>
 
 **You will need your SSN for:**
@@ -74,11 +80,14 @@ You should book an appointment online for this service.
 *   Disability pensions
 *   Any other government assistance programs
 
-*(See Appendix 3 in original guide for list of passport departments)*
-
 ## 6. Healthcare Registration
 Register at your local **polyclinic** for free basic services.
-1.  Find your nearest polyclinic (*See Medical section or Appendix 5*).
+
+<Note>
+You should [book an appointment online](https://migration.e-gov.am/en/) for this service.
+</Note>
+
+1.  Find your nearest polyclinic (see [Medical section](/living/medical) for full list and addresses).
 2.  Bring passport/residency card and SSN.
 3.  Sign an agreement with the polyclinic, marking you their patient.
 
@@ -97,19 +106,28 @@ Register at your local **polyclinic** for free basic services.
 
 **Insurance**: 
 In Armenia, individual insurance is less common. Repat Armenia offers a **group insurance package** with **Nairi Insurance**:
-*   **Cost**: ~130,000 AMD annually (30% discount for families of 3 or more).
+*   **Cost**: 130,000 AMD annually (30% discount for families of 3 or more - reduced to 91,000 AMD per person).
 *   **Coverage**: Up to 7 million AMD in medical bills.
+*   **Apply**: [Click here to apply for insurance coverage](https://www.repatarmenia.org/services-and-programs/health-insurance-package).
 
 ## 7. Improve Your Armenian
 Eastern Armenian is the official language. Here is how you can start learning:
-1.  **Online**: Websites and apps like **AYOlingo** or the **Armenian Virtual College**.
+1.  **Online**: Websites and apps like [**AYOlingo**](https://apps.apple.com/us/app/ayolingo-learn-armenian/id1367151083) ([Android](https://play.google.com/store/apps/details?id=org.birthrightarmenia.ayolingo)) or the [**Armenian Virtual College**](https://www.avc-agbu.org/).
 2.  **Private Lessons**: Many private tutors are available (search the Repat Armenia network).
 3.  **Media**: Read online newspapers, books (classics and contemporary), or watch Armenian TV/series.
-4.  **Free Classes**: Follow Repat Armenia or the **Repatriation and Integration Center of the Diaspora Office** for announcements of free language courses.
+4.  **Free Classes**: Follow [Repat Armenia language courses](https://www.repatarmenia.org/services-and-programs/armenian-language-courses) or the [**Office of the High Commissioner for Diaspora Affairs**](https://english.hartak.am/services/40b8ba7e-5f81-43f5-b33d-493bd88bee12/online/) ([Facebook](https://www.facebook.com/DiasporaGovAm)) for announcements of free language courses.
 
 ## 8. Education
 Register children at kindergarten or school early. Options include public and private institutions.
-*See Education section for details.*
+
+**Kindergartens:**
+- [Municipal kindergartens registration](https://mankapartez.yerevan.am/)
+- [Private kindergartens](https://yandex.com/maps/10262/yerevan/category/kindergarten_nursery/184107206/filter/privately/) (Yandex Maps)
+
+**Schools:**
+- Check [private international schools](https://schoolbell.net/am/international-schools/) over Yerevan
+
+*See [Education section](/living/education) for full details.*
 
 ## 9. Employment
 Start applying!
