--- a/content/move/first-steps.mdx
+++ b/content/move/first-steps.mdx
@@ -17,11 +17,23 @@ Visit **Repat Armenia Foundation** for repatriation advice and any repatriation-
 *   **Address**: Near Republic Square (Contact us for details)
 
 ## 2. Get a SIM Card & Internet
-Stay connected immediately.
-*   **Providers**: UCom, Viva, Team Telecom, Ovio.
-*   **Mobile Plans**: Prepaid starts at ~1,000 AMD. Monthly plans range 1,900 - 9,500 AMD ($5-25).
-*   **Home Internet**: Plans start from ~6,000 AMD. Often bundled with TV/Phone.
-*   **Note**: You need your passport. A deposit may be required for modems if you don't have a registered address (*grantsoum*) yet.
+Choose a mobile/internet provider among the three mobile phone service providers in Armenia: **UCom**, **Viva**, and **Team Telecom**. All three have generally good coverage in Yerevan and around Armenia. You might lose signal for a while when around mountains, but you are mostly connected.
+
+**Mobile Plans:**
+*   Two options: **monthly plan** or **pay-as-you-go** for cell phones
+*   Plans are inexpensive, starting at **1,000 AMD prepaid**
+*   Monthly plans range from **1,900 - 9,500 AMD** ($5-25/month)
+
+**Home Internet:**
+*   Available through **UCom**, **Team Telecom**, and **Ovio**
+*   All offer a combo of internet/phone/television
+*   Plans start from **6,000 AMD** for just internet
+
+<Note>
+You will need to bring your passport or other ID in with you when applying for any service.
+
+If you don't have grantsoum (address registration), you will be asked for a deposit payment on internet modems.
+</Note>
 
 ## 3. Open a Bank Account
 Opening a bank account is a general necessity. In Armenia, it is used to:
@@ -61,10 +73,12 @@ You should [book an appointment online](https://migration.e-gov.am/en/) for this
 *   **Landlord Issues**: Sometimes landlords have concerns about rights limitations. If this happens, refer to your district police station or contact lawyers to help resolve the issue.
 
 ## 5. Obtain a Social Security Number (SSN)
-Required for work, banking, and benefits.
+Obtain a Social Security Number (SSN) once you have received the official stamp in your passport verifying your registered address (also known as a grantsoum). You will have to approach the same station for your social security number and show your grantsoum and they will prepare the necessary paperwork.
+
 *   **Where**: The same police station where you registered your address. You can also get it at the main visa and passport department in **Davtashen** (17/10, Davtashen, 4th District).
 *   **Bring**: Passport with registered address stamp.
-*   **Tip**: Keep a digital scan of your SSN document; you usually only need the number.
+
+**PRO TIP:** Scan and file your documents digitally as you will only need the number in most cases, but a photo of the original might get you through if they request the actual document.
 
 <Note>
 You should [book an appointment online](https://migration.e-gov.am/en/) for this service. Davtashen office can be crowded by 9:00 AM; consider less crowded alternatives like Kanaker-Zeytun or Nubarashen offices.
@@ -104,10 +118,11 @@ You should [book an appointment online](https://migration.e-gov.am/en/) for this
 *   Ophthalmological services
 *   Dental services
 
-**Insurance**: 
-In Armenia, individual insurance is less common. Repat Armenia offers a **group insurance package** with **Nairi Insurance**:
-*   **Cost**: 130,000 AMD annually (30% discount for families of 3 or more - reduced to 91,000 AMD per person).
-*   **Coverage**: Up to 7 million AMD in medical bills.
+**Medical Insurance**: 
+
+As for medical insurance, in Armenia it is not that common to have it on an individual basis. Thus, it is more affordable and beneficial for you to be included in a corporate package. Repat Armenia Foundation has been working hard for years, bringing a group insurance package to repatriates looking to protect themselves in emergency situations. Since 2019, we have been working with **Nairi Insurance** to offer comprehensive coverage at a lower price.
+
+*   **Cost**: 130,000 AMD annually and 30% less with a family of 3+, it covers up to 7 million AMD in medical bills in Armenia.
 *   **Apply**: [Click here to apply for insurance coverage](https://www.repatarmenia.org/services-and-programs/health-insurance-package).
 
 ## 7. Improve Your Armenian
@@ -118,16 +133,14 @@ Eastern Armenian is the official language. Here is how you can start learning:
 4.  **Free Classes**: Follow [Repat Armenia language courses](https://www.repatarmenia.org/services-and-programs/armenian-language-courses) or the [**Office of the High Commissioner for Diaspora Affairs**](https://english.hartak.am/services/40b8ba7e-5f81-43f5-b33d-493bd88bee12/online/) ([Facebook](https://www.facebook.com/DiasporaGovAm)) for announcements of free language courses.
 
 ## 8. Education
-Register children at kindergarten or school early. Options include public and private institutions.
+Registering your children at kindergarten, school or applying to university is very important to ensure a quick integration process for them in Armenia. In Armenia, there are both public and private educational institutions starting from kindergarten. Check private [kindergartens](https://yandex.com/maps/10262/yerevan/category/kindergarten_nursery/184107206/filter/privately/) and [schools](https://schoolbell.net/am/international-schools/) all over Yerevan.
 
-**Kindergartens:**
-- [Municipal kindergartens registration](https://mankapartez.yerevan.am/)
+**Registration Options:**
+- [Municipal kindergartens registration](https://mankapartez.yerevan.am/) - for public kindergartens
 - [Private kindergartens](https://yandex.com/maps/10262/yerevan/category/kindergarten_nursery/184107206/filter/privately/) (Yandex Maps)
+- [Private international schools](https://schoolbell.net/am/international-schools/)
 
-**Schools:**
-- Check [private international schools](https://schoolbell.net/am/international-schools/) over Yerevan
-
-*See [Education section](/living/education) for full details.*
+For more detailed information, please refer to the [Education section](/living/education).
 
 ## 9. Employment
 Start applying!
