add a bunch of missing content

--- a/content/living/cost-of-living.mdx
+++ b/content/living/cost-of-living.mdx
@@ -5,7 +5,9 @@ description: Estimated budgets and expenses in Armenia
 
 # Cost of Living in Armenia
 
-Costs vary greatly based on lifestyle, but here are some estimates to help you budget.
+One of the first things people ask is what the cost of living in Armenia is compared to the lower salaries received. We've compiled a list of different budgets based on marital and family status to help newcomers understand what their own budget might look like. However, each individual's and family's cost of living differs greatly based on their personal needs. One may have rent, one may have a mortgage, one may have everything paid off. One may have a car, one may use taxis, one may prefer public transport or walking to his/her destination.
+
+Of course, how much you spend is entirely dependent on so many factors, it's hard to take all of them into account. Using the subsections mentioned above, we'll delve a little deeper into the costs.
 
 ## Monthly Budget Estimates (USD)
 
@@ -21,12 +23,15 @@ Costs vary greatly based on lifestyle, but here are some estimates to help you b
 ## Expense Breakdown
 
 ### Food
-*   **Groceries**: Affordable seasonal produce. Supermarkets range from budget to premium.
-*   **Eating Out**: Business lunch ~$3-5. Dinner for two ~$20.
+*   **Groceries**: In Armenia, there is a variety of both affordable and premium-class supermarkets and small stores. For fruits and vegetables, there is a seasonal factor which affects the price. While most of the stores are following the standards, please pay attention to the expiration date. You can also shop at local markets (shuka) where you can buy agricultural products from farmers.
+*   **Eating Out**: Armenia now offers an incredible variety of restaurants, from your low-priced taverns to highly expensive Asian and European options. You can have a full meal at a canteen or tavern for as little as $3-5 per person for a business lunch (including main and side dish, and drink). Average bill for two people is around $20.
 
 ### Utilities
 *   Includes electricity, gas, water, internet/TV/phone.
+*   **Phone/Internet/TV Bundle**: Packages can be as low as 10,000 AMD for all three services combined.
+*   **Cell Phone**: Prepaid options start at low rates.
 *   **Heating**: Decentralized (gas boilers) is common; costs vary by season and building insulation.
+*   **Factors Affecting Costs**: Consider building age (old vs. new), outer wall materials, window types, and heating/cooling systems when budgeting.
 *   **Payment**: Easy via banking apps, terminals (Telcell, EasyPay, iDram, UPay), or post offices.
 *   **Billing**: Bills are available online from the 8th of the month; payment is due by the 20th.
 
