--- a/content/living/marriage-divorce.mdx
+++ b/content/living/marriage-divorce.mdx
@@ -10,20 +10,42 @@ Marriage in Armenia is a voluntary union between a man and a woman (18+ years ol
 
 ### Requirements
 *   **Mutual Consent**: Both parties must be present. Proxy marriages are prohibited.
-*   **Restrictions**: No polygamy, close relatives, or incapacitated persons.
-*   **Same-Sex Marriage**: Not currently recognized.
+*   **Restrictions**: No polygamy, marriage between immediate family members (parents, grandparents, siblings), first cousins from either side of the family tree, or incapacitated persons.
+*   **Same-Sex Marriage**: A marriage is between a man and a woman in Armenia. No same-sex or cohabitation relationships can be viewed as marriage or recognized as such, at the moment.
+
+<Note>
+**Foreign Citizens & Diaspora**: Foreign citizens, stateless persons, and Armenian citizens residing in foreign countries may marry in Armenia with permission from the Head of the Civil Status Acts Registration Agency of the Ministry of Justice of the Republic of Armenia.
+</Note>
 
 ### Registration Process
 1.  **Apply**: Submit an application to the **Civil Status Acts Registration Agency** (Ministry of Justice) electronically or at service centers.
+    
+    <Info>
+    **Government Hours**: All government agencies have a lunch break from 13:00 to 14:00.
+    </Info>
+    
 2.  **Documents Needed**:
     *   Passports/ID cards.
     *   Proof of termination of previous marriage (divorce decree/death certificate), if applicable.
     *   For foreigners: Document certifying marital status from their country of permanent residence.
-3.  **Surnames**: Spouses can keep their own, take the other's, or hyphenate (if single surnames).
+3.  **Ceremony Location**: Both parties must be present at the signing. If there is a specific reason why either party cannot be present (illness, etc.), the ceremony may be conducted in their home or medical institution.
+4.  **Surnames**: Spouses can keep their own, take the other's, or hyphenate (if single surnames).
+5.  **Fees**: No state duty is envisaged for registration of a marriage.
 
-**Note**: Only state-registered marriages are legally valid. Church weddings alone do not carry legal weight.
+<Note>
+In case of submitting the application on state registration of marriage through an authorized person, the application containing information on marital status, filled out by the person entering into marriage, is also submitted through the approved notarial procedure.
+</Note>
+
+**Note**: Only state-registered marriages are legally valid. Church weddings alone do not carry legal weight. Cohabitation without official registration does not carry any legal responsibility.
+
+<Note>
+**Property Rights**: All property acquired after marriage belongs to both spouses unless otherwise specified in a signed contract. Personal property acquired before marriage is treated separately.
+</Note>
 
 ## Divorce
+
+The end of a marriage can be quite painful, and not all parties will always agree to it. In Armenia, so long as both consent to the act, their divorce is carried out in the body of the civil status acts registration. Should one of the parties be declared missing or having no legal capacity, as well as incarcerated for over three years' time, the divorce may go through on one application. Furthermore, if one of the spouses is unable to make it, his or her signature on the application must be notarized to be accepted by the courts. It would be carried out by the courts in general, should there not be consent from one spouse or he/she doesn't follow through, or both wish to take it to court. If it is through this method, then the divorce is finalized upon judgement. In both cases, the divorce will be registered officially.
+
 Divorce can be processed through the **Civil Registry Office** or the **Courts**.
 
 ### Civil Registry Divorce
@@ -32,9 +54,18 @@ Possible if:
 *   One spouse is declared missing, incapacitated, or imprisoned for >3 years.
 
 **Process**:
-1.  Submit a joint application.
-2.  Divorce is official between 1-3 months later.
-3.  Cost: 10,000 AMD state duty.
+1.  Submit a joint application to the Civil Status Acts Registration Agency.
+2.  **Location**: State registration of a divorce is carried out by a member of the Civil Registry Office at:
+    - The place where the spouses cohabite;
+    - The place where one of the spouses resides;
+    - At the Civil Registry Office for the registration of marriages.
+3.  **Temporary Residence**: The registration of a divorce between citizens residing without a permanent registration is carried out by the body of the civil status acts registration of the place of temporary residence of the citizen getting divorced. In that case, the citizen must submit a reference from the place of temporary residence issued by the competent authorities.
+4.  **Timeline**: Divorce is official between 1-3 months later. They may withdraw their application at any given point before it is registered as divorce.
+5.  **Cost**: 10,000 AMD state duty.
+
+<Note>
+**Pregnancy Restriction**: The husband does not have the right to submit an application for divorce during the pregnancy of the wife, without the consent of the wife.
+</Note>
 
 ### Court Divorce
 Required if:
@@ -42,6 +73,14 @@ Required if:
 *   There are disputes over custody or property.
 
 **Note**: Armenian courts have jurisdiction over divorces of Armenian citizens, even if the marriage occurred abroad.
+
+<Note>
+**Court Proceedings**: In court proceedings, divorce comes into effect the day judgment is served. The court may call for a three-month period of reconciliation. Rulings are generally in favor of the children (under 18).
+
+In court cases, divorce is possible through letter of attorney/representative.
+</Note>
+
+**After Divorce**: Spouses may keep their current surnames or change back to premarital surnames.
 
 ### Documents for Divorce
 *   ID documents.
