--- a/content/move/moving-belongings.mdx
+++ b/content/move/moving-belongings.mdx
@@ -5,7 +5,11 @@ description: Customs, tax-free imports, and shipping
 
 # Moving Your Personal Belongings
 
-Repatriates can often bring belongings tax-free. Current laws align with EAEU regulations.
+Repatriates can bring belongings tax-free under EAEU regulations. However, **you are responsible for all transportation costs**, including packing, shipping, and warehousing in Armenia. A customs clearance fee of ~7,000 AMD may also be charged.
+
+## Finding a Shipping Broker
+
+Repat Armenia doesn't have any partner brokers we can officially recommend. However, you can find recommendations from other repatriates in the **Armenian Repatriates Network** Facebook group.
 
 ## Eligibility for Tax-Free Import
 
@@ -16,11 +20,12 @@ You may be eligible if you are:
 
 **Residency Requirement**: You must not have lived in Armenia for more than **915 days** (2.5 years) in the last **5 years** (or spent at least 9/12 days per year outside of Armenia).
 *   **Registration Deadline**: You must register your address (*grantsoum*) within **180 days** of your actual arrival in Armenia.
-*   **Import Timeframe**: You have **18 months** from the date of "arrival for permanent residence" (the day you received your repatriate resident's ID card or citizenship certificate) to import goods tax-free.
+*   **Import Timeframe**: You have **18 months** from the date of "arrival for permanent residence" (the day when the repatriate registers his address with the police, or if the address had already been registered, the day of filing a statement with the customs office) to import goods tax-free.
 *   **Filing Statement**: If you had already been registered in Armenia, you must file a statement with the customs office within **3 months from the time of entry** into Armenia.
 
 **Alternative Option**: If you haven't lived in Armenia for >12 months in the last 420 days, you can import up to **5,000 EUR** value (excluding cars).
-*   *Note*: You must submit a written request within **60 days** of arrival. This option is available once every 3 years.
+*   *Note*: You must submit a written request within **60 days** of arrival, attaching the necessary documents proving temporary foreign residency. This option is available once every 3 years.
+*   **Important**: You cannot apply for both options simultaneously.
 
 ## What You Can Bring
 *   **Personal Items**: Unlimited clothing, books, bedding, home accessories, etc.
@@ -31,25 +36,35 @@ You may be eligible if you are:
 ### Packing Rules & Restrictions
 *   **Condition**: Items must be **used** (no original sealed packaging or factory labeling).
 *   **Weight**: Boxes should not exceed **25 kg** each.
-*   **Prohibited**: Do not pack liquids, food, medication, or flammable items.
+*   **Prohibited**: Do not pack liquids, food, medication, flammable items, or anything otherwise deemed dangerous.
+*   **Packing Tip**: Make sure to pack in such a way that heat and cold won't hurt it.
 *   **Do NOT bring**: Paper products, toilet paper, and similar consumables that are easily available in Armenia.
-*   **Pro Tip**: Remove all batteries from toys and electronics.
+*   **Pro Tip**: Remove all batteries from toys and electronics. Saves you the headache later.
 *   **Business Use**: Do not bring items for business use, construction materials (pipes, toilets), or large quantities of electronics.
 
 ## The Process
 
+**Before Shipping**: It is recommended to send a list of items you plan to bring to the customs office beforehand, just to make sure there isn't anything taxable.
+
 1.  **Get Status**: Obtain residency/citizenship and register your address (*grantsoum*).
-    *   *Cost*: Grantsoum costs ~1,000 AMD.
-    *   *Tip*: Ensure your local contact number is on your boxes so you can be notified of arrival.
-2.  **Apply for Certificate**: Apply at the Passport and Visa Department for a document confirming your move for permanent residence.
+    *   *Cost*: Grantsoum costs 1,000 AMD - to be paid at the bank to the specific number provided, or by terminal at 100 AMD extra cost.
+    *   *Tip*: Ensure your local contact number is on your boxes so you can be notified of arrival. If you use a number that's not local, you won't receive the call that your items have arrived.
+    *   **Important**: The address provided on your shipping documents must be that of your grantsoum.
+2.  **Apply for Certificate**: Apply at the Passport and Visa Department for a document confirming your move for permanent residence. This document is issued to foreign physical persons who have citizenship of the Republic of Armenia, or special (5 years) or permanent (10 years) residence status of the Republic of Armenia, or another status equivalent to them.
     *   *Timeline*: Usually issued within **5 working days**.
-3.  **Submit to Customs**: The repatriate must file an application for tax-free import with the customs office, specifying the item description and number of items imported.
+3.  **Submit to Customs**: The repatriate must file an application for tax-free import with the customs office (on paper or electronically), specifying the name, weight, and quantity of imported personal goods.
     *   Send your documents and list of goods to the State Revenue Committee (*secretariat@petekamutner.am*).
-    *   *Processing*: The customs office has up to **10 days** to grant or reject the application.
-4.  **Clear Customs**: Go to the cargo office to pick up items.
+    *   *Processing*: The customs office has up to **3 working days** to grant or reject the application.
+4.  **Clear Customs**: The taxation waiver will be sent to the cargo office, where you will show up in person to grab your belongings when everything is ready. The company might also have a door-to-door service. Check about what that means exactly from the beginning.
+
+<Note>
+**PRO TIP**: Make sure you have absolute essentials packed in your suitcases, just in case you don't have access to your items for some time, from basic necessities to entertainments.
+</Note>
     *   *Warehouse Fees*: **Free for the first 48 hours**. After that, fees are ~10,000 - 20,000 AMD per day depending on volume.
 
 ### Required Paperwork
+The following documents must also be attached (Decision 1131-N dated 02.07.2020 of the Government of the Republic of Armenia):
+
 *   **Proof of Status**: Document confirming RA citizenship, residency, or refugee status.
 *   **Proof of Move**: Document from Passport & Visa Dept confirming move for permanent residence.
 *   **Proof of Foreign Residence**: Foreign passport or residence permit confirming residence abroad.
@@ -69,11 +84,24 @@ You may be eligible if you are:
 For movement of goods within the **EAEU**, customs clearance generally doesn't apply. However, since Armenia doesn't share borders with other EAEU members, if transporting by road (via Georgia), a **customs declaration** should be filled out in the exporting country.
 
 ## Shipping by Post
-*   **Tax-Free Limit**: 31 kg and 200 EUR value (from non-EAEU countries).
-*   **Over Limit**: 15% duty on the excess value (min 2 EUR per extra kg).
+Starting from March 31, 2022, no customs fees or taxes are charged for goods imported in the Republic of Armenia by physical persons via carriers or in international postal deliveries from countries which are not members of the Eurasian Economic Union.
+
+*   **Tax-Free Limit**: 31 kg and 200 EUR value (as of April 1, 2024) from non-EAEU countries.
+*   **Over Limit**: If the total weight exceeds 31 kg or the value exceeds 200 EUR, a customs fee and taxes will be charged at the united rate of 15% of the exceeding part, but not less than 2 EUR (the equivalent in AMD) for every 2 kg over 30 kg.
+
+You are allowed to bring in items through post. We recommend only using this for personal items, however the information might come in handy in general. There is no difference here if the items are new or used. However, there are maximum amounts to the number of a certain item you may bring in.
 
 ## Pets
-Importing pets requires:
+
+### Required Documents
+If you are bringing pets, you will need:
+*   **Detailed inventory** including values
+*   **Copy of Passport**
+*   **Copy of Visa**
+*   **Letter of employment**
+
+### Veterinary Requirements
+Importing pets also requires:
 *   **Veterinary Health Certificate**: Clearing the animal of Rabies and other diseases.
 *   **Vaccination Certificate**.
 *   **Pet Passport**.
