--- a/content/work-finance/employment.mdx
+++ b/content/work-finance/employment.mdx
@@ -14,9 +14,15 @@ Finding a job is a top priority for most repatriates.
 *   **Networking**: Crucial in Armenia. Talk to people and attend events. The more people you meet, the easier your integration process will be.
 
 ## Application Tips
-1.  **Diplomas**: Bring your diplomas and certificates. While most may not ask, international institutions often require originals.
-2.  **Resumes**: Most Armenian companies prefer an **American style** (concise, single page) CV. Focus on skills and value.
-3.  **Language**: Learning Armenian (at least conversational) and potentially Russian greatly increases your hiring chances.
+When applying for a job, please follow these instructions:
+
+1.  **Diplomas**: Bring your diplomas and certificates. While most may not ask to see them, some international institutions, especially, will require originals.
+2.  **Resumes**: Most Armenian companies use an American style as template and prefer single page attachments to your email. However, please make sure you research the company you're applying to and match their needs.
+3.  **Networking**: Actively network. The more people you meet, the easier your integration process will be. Update your LinkedIn, join relevant Facebook groups (HR.AM CLUB, Jobs for repats and expats in Armenia, Գործ Կա) and try to attend repat and expat events in town.
+4.  **Language**: It is recommended to learn Armenian once you arrive, at least on a conversational level, to compliment your English proficiency. You may want to pick up some Russian, as well. This greatly increases your chances of being hired to just about any position that might require contact with Russian-speakers.
+
+## Networking and Integration
+Do active networking with repatriates and locals because it will help you to be smoothly integrated. The Armenian Repatriates Network, which is a Facebook private group, was created as a space for collectively promoting repatriation, supporting successful integration and facilitating a more pro-repatriation environment in Armenia.
 
 ## Salaries
 *   **Minimum Wage**: 75,000 AMD.
@@ -24,7 +30,7 @@ Finding a job is a top priority for most repatriates.
 *   **Average**: ~297,624 AMD (as of June 2025).
 
 ## Support
-Repat Armenia offers career counseling and resume writing assistance. Contact our Case Manager at `repatriation@repatarmenia.org`.
+In the Employment in Armenia section, you will find more about the sector in Armenia, how to protect your rights, where to apply for a job, and how to go about setting up your career. Repat Armenia offers career counseling as well as resume writing assistance. Do not hesitate to contact our Case Manager at `repatriation@repatarmenia.org`.
 
 ## Work Permits
 As of 2019, foreigners (non-citizens/non-residents) need a work permit.
