--- a/content/work-finance/financials.mdx
+++ b/content/work-finance/financials.mdx
@@ -5,7 +5,7 @@ description: Banking and money management in Armenia
 
 # Financials
 
-Managing your finances is a crucial part of settling in.
+You might be moving your savings or earning in the country. In either case, you will need to know some basics about money in Armenia.
 
 ## Moving Money to Armenia
 Moving your financial assets to Armenia is relatively straightforward:
@@ -17,7 +17,7 @@ Moving your financial assets to Armenia is relatively straightforward:
 4.  **Online**: Some banks allow opening accounts online.
 
 ## Banks in Armenia
-There are 18 banks operating in Armenia, including local and international subsidiaries.
+There are 18 banks that operate in Armenia. Some are locally owned, some are subsidiaries of international banks. All have competitive advantages, so it's best to shop around for each product offered. While some offer higher interest rates on deposits, others have better terms for mortgage loans or the transferring of large amounts from abroad.
 
 ### International Subsidiaries
 *   **Byblos Bank Armenia**: Focus on retail banking (loans, deposits). Offers a **Diaspora Housing Loan** for non-residents.
@@ -38,26 +38,41 @@ There are 18 banks operating in Armenia, including local and international subsi
 *   **Inecobank**: High savings rates, user-friendly app (InecoMobile), and InecoPay. **Easily opens accounts for Iranian-Armenians**. Offers free Social Package accounts.
 *   **Unibank**: Specializes in retail/private banking. Unistream transfers available via app.
 *   **ID Bank**: Offers micro-loans and energy-efficient renovation loans ("Jerm Ojakh").
-*   **Fastbank**: 24/7 services in 33 branches.
+*   **Fastbank**: Provides a wide range of services to customers 24/7 in 33 branches throughout Yerevan and the regions of the Republic of Armenia.
+
+For comprehensive information about banks and Armenia's financial system, visit [banks.am](https://www.banks.am) or [cba.am](https://www.cba.am) (Central Bank of Armenia).
 
 ## ATMs and Payments
-*   **ATMs**: Widely available. Dispense **AMD only**. Watch out for withdrawal fees.
-*   **Card Payments**: Accepted in most stores (even small ones). Visa and Mastercard are standard.
+*   **ATMs** (Bankomats): Found on nearly every street corner throughout the center and connected to every bank branch. Multiple ATM machines are also available in each mall. All ATMs dispense **AMD only**, regardless of your account type. Be aware that withdrawal fees vary by bank and depend on the type of card you have—this is directly correlated with your monthly service fees.
+*   **Card Payments**: Accepted in most stores (even small ones selling vegetables and fruits). Visa and Mastercard are standard. Instead of large cash registers, most businesses use small receipt-printing machines called **HDM** (fiscal data module). Most family businesses and even larger ones work this way, though many have also begun offering credit card payment options.
 *   **Credit Cards**: Less common than debit cards; high interest rates. Most people use debit cards.
 
 ## Currency Exchange
-*   **Apps**: Use `rate.am` to find the best exchange rates.
-*   **Locations**: Banks, supermarkets (SAS often has good rates), and exchange kiosks.
+It is recommended to have an app to show you where your nearest exchange offices are located, as well as their rates. There are more options to choose from in the city center, but even outside the center, most supermarkets offer an exchange kiosk. The rates differ based on currency and location.
+
+*   **Apps**: Use `rate.am` to help locate the best banks to exchange at for least loss between currencies.
+*   **Locations**: Banks, supermarkets, and exchange kiosks. SAS often has the best rates.
+*   **Note**: Most exchange points have similar rates, however.
 
 ## Loans
 *   **Types**: Consumer, car, student, mortgage, business.
 *   **Guarantors**: Often required. A guarantor must be:
     *   A legal adult.
-    *   A resident/citizen with steady income.
-    *   Available in person to sign.
-*   **Risks**: The guarantor takes on full responsibility (debt, interest, fees) if you default. This can lead to loss of assets and impact their own credit history.
+    *   At least a special residency if not citizenship, and legally registered in Armenia.
+    *   Has a steady income.
+    *   Available in person to sign with you at the bank.
+    *   **Required documents**: ID, a document from the workplace, and anything else the bank specifically needs.
+*   **Guarantor Responsibilities**: The guarantor essentially ensures the one taking out the loan will be responsible and pay on time, agreeing to take on all the responsibility should the loan receiver default. This includes paying interest, court fees, and damages.
+*   **Risks**: The risks include losing the guarantor's own assets. It could also negatively impact the guarantor's own loan history, making it harder to receive one in the future.
+*   **Guarantor Rights**: 
+    *   The guarantor can appeal the charges, no matter the response from the loan receiver.
+    *   The guarantor may also demand damages paid from the loan receiver.
 
 ## Savings Accounts
+One of the best passive income avenues available in Armenia are the high interest savings accounts. Each bank is different in the interest rate they offer, however the overall trend is that AMD has the highest return, the USD is second highest, and the Euro is lowest. Some banks have extremely low rates, so it is best to shop around.
+
+While it is considered riskier, AMD has been more or less consistent since the beginning, and certainly as of the 2000s. It is comparable with some of the more stable currencies, such as the USD and Japanese Yen.
+
 *   **Interest Rates**: AMD accounts offer the highest rates (up to ~10%), followed by USD, then EUR.
 *   **Tax**: 10% income tax is deducted from interest earned.
 *   **Examples** (approximate as of 2025):
